# tekitoi

./: .gitignore  .gitlab-ci.yml  404.html  Cargo.toml  Dockerfile  README.md  configuration.html  contributors.html  docker-compose.yml  examples.html  index.html  installation.html  introduction.html  print.html  searchindex.js  searchindex.json
.github/: dependabot.yml
.github/workflows/: code-checking.yml  demo.yml  documentation.yml  fake-app.yml  server-testing.yml  server.yml
server/: Cargo.toml  config.json
server/migrations/sqlite/: 20241112101300_create-authorization.sql  20241112110000_create-session.sql  20241112121000_create-application.sql  20241112121050_create-provider.sql  20241112121100_create-user.sql  20241112121200_create-authorization.sql  20241112121300_create-session.sql
server/src/: app.rs  helper.rs  main.rs
server/src/entity/: application.rs  authorization.rs  code_challenge.rs  mod.rs  provider.rs  response_type.rs  session.rs  user.rs
server/src/router/: asset.rs  mod.rs
server/src/router/api/: access_token.rs  error.rs  mod.rs  prelude.rs  status.rs  user_info.rs
server/src/router/asset/: mod.rs  style.css
server/src/router/ui/: authorize.rs  error.rs  helper.rs  mod.rs
server/src/router/ui/login/: credentials.rs  mod.rs  profiles.rs  userlist.rs
server/src/service/: dataset.rs  mod.rs
server/src/service/cache/: memory.rs  mod.rs
server/src/service/database/: mod.rs
server/src/service/dataset/: credentials.rs  mod.rs  profiles.rs  userlist.rs
server/src/test/: mod.rs  workflow.rs
tekitoi-demo/: Cargo.toml  Dockerfile
tekitoi-demo/src/: authorize.rs  home.rs  main.rs  redirect.rs  settings.rs  status.rs
tekitoi-demo/templates/: home.html
tekitoi-doc/: book.toml
tekitoi-doc/src/: SUMMARY.md  configuration.md  installation.md  introduction.md
tekitoi-fake-app/: Cargo.toml  Dockerfile
tekitoi-fake-app/src/: redirect.rs  status.rs
tekitoi-fake-app/templates/: home.html
tekitoi-server/: .gitignore  Cargo.toml  Dockerfile  config.example.toml
tekitoi-server/migrations/sqlite/: 20240101110000_create-application-tables.down.sql  20240101110000_create-application-tables.up.sql  20240101120000_create-request-tables.down.sql  20240101120000_create-request-tables.up.sql
tekitoi-server/src/: arguments.rs  entity.rs  lib.rs  main.rs  settings.rs
tekitoi-server/src/entity/: incoming.rs  local.rs  mod.rs  redirected.rs  token.rs
tekitoi-server/src/handler/: mod.rs
tekitoi-server/src/handler/api/: authorize.rs  error.rs  mod.rs  prelude.rs  redirect.rs  status.rs  token.rs  user.rs
tekitoi-server/src/handler/view/: authorize.rs  error.rs  mod.rs
tekitoi-server/src/model/: application.rs  application_authorization_request.rs  incoming.rs  local.rs  mod.rs  provider.rs  provider_authorization_request.rs  redirected.rs  token.rs
tekitoi-server/src/service/: base_url.rs  cache.rs  mod.rs
tekitoi-server/src/service/cache/: mod.rs  redis.rs
tekitoi-server/src/service/client/: github.rs  gitlab.rs  google.rs  mod.rs  oauth.rs
tekitoi-server/src/service/database/: mod.rs  sqlite.rs
tekitoi-server/templates/: authorize.html  error.html
tekitoi-server/tests/: basic.toml  router_api_status.rs  simple.toml
ui/: Cargo.toml
ui/src/: lib.rs
ui/src/asset/: mod.rs  style.css
ui/src/component/: head.rs  mod.rs  text_field.rs
ui/src/view/: error.rs  mod.rs  redirect.rs
ui/src/view/authorize/: credentials.rs  mod.rs  profiles.rs
ui/tests/: helper.rs  view-authorize.rs  view-error.rs
