[package]
name = "tekitoi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", default-features = false, features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
