[package]
name = "tekitoi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
html-escape = "0.2"
moka = { version = "0.12.8", features = ["log", "future"] }
rand = { version = "0.8.5", default-features = false, features = [
    "std",
    "std_rng",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_urlencoded = { version = "0.7" }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", default-features = false, features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1.2"
tower = "0.5.1"
