[package]
name = "tekitoi-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0" }
config = { version = "0.13", default-features = false }
oauth2 = { version = "4.3" }
redis = { version = "0.21", default-features = false, features = ["tokio-comp"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls"] }
sailfish = { version = "0.4" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.11" }