[package]
name = "tekitoi-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
config = { version = "0.14", default-features = false }
moka = { version = "0.12.5", features = ["future"] }
oauth2 = { version = "4.4" }
redis = { version = "0.24", default-features = false, features = [
    "tokio-comp",
] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls",
] }
sailfish = { version = "0.8" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "1.36", features = ["rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.18" }
