[package]
name = "tekitoi-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = { version = "0.6" }
actix-web = { version = "4.4" }
anyhow = { version = "1.0" }
clap = { version = "3.2", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
deadpool-redis = { version = "0.14", features = ["serde"] }
oauth2 = { version = "4.4" }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls",
] }
sailfish = { version = "0.8" }
serde = { version = "1.0" }
serde_qs = { version = "0.12" }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
url = { version = "2.5", default-features = false, features = ["serde"] }
uuid = { version = "1.7", features = ["v4"] }

[dev-dependencies]
actix-http = { version = "3.5" }
regex = { version = "1.10" }
